<resources>
    <string name="app_name">FitnessApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_header">My Fitness Activities</string>
    <string name="title_view_fitactivity">View Fitness Activity</string>
    <string name="title_edit_fitactivity">Edit Fitness Activity</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_startTime">Start</string>
    <string name="hint_endTime">Ended</string>
    <string name="description_auto_fill_title">Autofill title based on activity</string>
    <string name="description_activity_ended_now">Automatically input end time?</string>
    <string name="description_fitness_activity_spinner">Fitness Activity</string>
    <string name="description_intensity">Intensity</string>
    <string name="description_duration">Duration</string>
    <string name="description_minutes">Min</string>
    <string name="description_calories_burned">Calories</string>
    <string name="description_automatic_input">Automatic?</string>
    <string name="description_ending_now">Now?</string>
    <string name="description_ending_time">Ending Time</string>
    <string name="accessibility_manual_override_calories">Checking this box will let you manually override the calories burned.</string>
    <string name="accessibility_calories_box">Input how many calories you burned here. Automatic unless you check the box to the right.</string>
    <string name="tooltip_automatic_input">Input the value automatically.</string>
    <string name="hint_weight_input">Weight (lbs)</string>
    <string name="hint_height_input">Height (in)</string>
    <string name="hint_age_input">Age (yrs)</string>
    <string name="error_not_enough_data">Not enough data</string>
    <string name="menu_option_clear">Clear</string>
    <string name="description_weight">Weight</string>
    <string name="description_height">Height</string>
    <string name="description_age">Age</string>
    <string name="description_bmi">BMI</string>
    <string name="btnText_save">Save</string>
    <string name="btnText_create">Create</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
