<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="80dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp"
            android:labelFor="@id/input_weight"
            android:text="@string/description_weight"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp"
            android:labelFor="@id/input_height"
            android:text="@string/description_height"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp"
            android:labelFor="@id/input_age"
            android:text="@string/description_age"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp"
            android:labelFor="@id/bmi_output"
            android:text="@string/description_bmi"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_weight_input"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/input_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_height_input"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/input_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_age_input"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/bmi_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="9dp"
            android:text="Not enough data"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>